--- a/LF.Project/LF.Novel/LF.FictionWorld.Project/Pages/BookPage.xaml
+++ b/LF.Project/LF.Novel/LF.FictionWorld.Project/Pages/BookPage.xaml
@@ -4,9 +4,112 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LF.FictionWorld.Project.Pages"
+             xmlns:controls ="clr-namespace:LF.FictionWorld.Project.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             d:DesignHeight="450" d:DesignWidth="800"
+             Loaded="UserControl_Loaded">
+    <Grid Margin="4">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <Border Grid.Row="0" Grid.Column="0" Margin="4" BorderBrush="{StaticResource LineColor}" BorderThickness="1">
+            <Grid Background="White">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="90"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Border Grid.Column="1" Width="70" Margin="10 10 20 10" CornerRadius="35" BorderThickness="1" BorderBrush="{StaticResource MainColor}" Background="#f0f0f0">
+                        <Image></Image>
+                    </Border>
+                    <StackPanel Grid.Column="0" VerticalAlignment="Bottom" Margin="0 0 0 10">
+                        <TextBlock Text="{Binding Book.Name}" Foreground="{StaticResource MainColor}" VerticalAlignment="Center" Margin="20 0 0 0"
+                                                           FontSize="30" FontWeight="ExtraBlack"></TextBlock>
+                        <TextBlock Text="{Binding Book.Code}" VerticalAlignment="Bottom" Foreground="Gray" Margin="20 5 0 0" FontSize="12"></TextBlock>
+                    </StackPanel>
+                </Grid>
+                <Grid Grid.Row="1" Margin="20 0 20 10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30"/>
+                        <RowDefinition Height="30"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="等级" VerticalAlignment="Center" FontSize="12" Foreground="Gray"></TextBlock>
+                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Item.Level.Value}" VerticalAlignment="Center" FontSize="12" Margin="0 0 30 0"></TextBlock>
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="属性" VerticalAlignment="Center" FontSize="12" Foreground="Gray"></TextBlock>
+                    <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Book.Attribute}" VerticalAlignment="Center" FontSize="12"></TextBlock>
+                    <TextBlock Grid.Row="2" Grid.Column="0" Text="简介" VerticalAlignment="top" FontSize="12" Foreground="Gray" Margin="0 6.8 0 0"></TextBlock>
+                    <TextBlock Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Book.Brief}" VerticalAlignment="Stretch" FontSize="12"  Margin="0 6.8 0 6.8"  TextWrapping='Wrap'></TextBlock>
+                </Grid>
+            </Grid>
+        </Border>
+        <Grid Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Margin="4">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"
+                BorderBrush="{StaticResource LineColor}" BorderThickness="1 1 1 0" Background="White">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Orientation="Horizontal" Margin="3" VerticalAlignment="Center">
+                        <TextBlock Text="秘籍列表" VerticalAlignment="Center" Foreground="{StaticResource MainColor}" Margin="5 0 10 0"></TextBlock>
+                        <Button x:Name="BtnAdd" Content="添加" Margin="0 0 5 0"
+                                Click="BtnAdd_Click"></Button>
+                        <Button x:Name="BtnEdit" Content="编辑" Margin="0 0 5 0"
+                                Click="BtnEdit_Click"></Button>
+                        <Button x:Name="BtnDelete" Content="删除" Margin="0 0 5 0"
+                                Click="BtnDelete_Click"></Button>
+                        <TextBox Width="100" Margin="0 0 2 0" VerticalContentAlignment="Center"></TextBox>
+                        <Button Content="搜索" Margin="0 0 0 0" Style="{StaticResource FlatButton}"></Button>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="5" VerticalAlignment="Center">
+                        <TextBlock Text="总计："></TextBlock>
+                        <TextBlock x:Name="TxbCount" Text="{Binding BookList.Count}" Foreground="{StaticResource MainColor}" Margin="0 0 3 0"></TextBlock>
+                    </StackPanel>
+                </Grid>
+            </Border>
+            <DataGrid x:Name="DtgBooks" IsReadOnly="True" Grid.Row="1"
+                      SelectionChanged="DtgBooks_SelectionChanged" MouseDoubleClick="DtgBooks_MouseDoubleClick">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="序号" Width="100" Binding="{Binding Code}" ></DataGridTextColumn>
+                    <DataGridTextColumn Header="名称" Width="1*" Binding="{Binding Name}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="等级" Width="80" Binding="{Binding Level.Value}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="属性" Width="*" Binding="{Binding Attribute}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="最高等级" Width="80" Binding="{Binding Content.Count}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="技能总数" Width="80" Binding="{Binding Skills.Count}"></DataGridTextColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+        <GroupBox Header="内容" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" Margin="4">
+            <DataGrid x:Name="DtgContent" Grid.Row="1" IsReadOnly="True" BorderThickness="0">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="序号" Width="40" Binding="{Binding ID}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="名称" Width="40" Binding="{Binding Name}" Foreground="#1D6BFF"></DataGridTextColumn>
+                    <DataGridTextColumn Header="简介" Width="*" Binding="{Binding Brief}" ></DataGridTextColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </GroupBox>
+        <GroupBox Header="技能" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="4">
+            <controls:SkillTree SkillList="{Binding Book.Skills}" BorderThickness="0" Margin="8"></controls:SkillTree>
+        </GroupBox>
     </Grid>
 </UserControl>
