--- a/LF.Project/Lib.UI/LF.Controls/Styles/Button.xaml
+++ b/LF.Project/Lib.UI/LF.Controls/Styles/Button.xaml
@@ -89,4 +89,29 @@
         </Setter>
     </Style>
 
+    <Style x:Key="SkillButton" TargetType="Button">
+        <Setter Property="Width" Value="auto"/>
+        <Setter Property="MinHeight" Value="24"/>
+        <Setter Property="Cursor" Value="Hand"></Setter>
+        <Setter Property="VerticalAlignment" Value="Center"></Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Grid>
+                        <Border x:Name="border" CornerRadius="8" BorderThickness="2" BorderBrush="{StaticResource MainColor}" Background="Transparent">
+                            <TextBlock x:Name="text" Text="{TemplateBinding Content}"
+                                       VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5 0 5 0"
+                                       Foreground="Black" FontSize="12"></TextBlock>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter TargetName="text" Property="Foreground" Value="{StaticResource MainColor}"/>
+                        </Trigger>
+
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
