串口通信助手
串口通信助手基本完成，后续继续完善界面；并补充协议收发功能。

--- a/LF/Projects/LF.Communication/LF.GCS.Project/App.xaml
+++ b/LF/Projects/LF.Communication/LF.GCS.Project/App.xaml
@@ -4,6 +4,13 @@
              xmlns:local="clr-namespace:LF.GCS.Project"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/LF.Controls;component/Styles/Color.xaml" />
+                <ResourceDictionary Source="/LF.Controls;component/Styles/Button.xaml" />
+                <ResourceDictionary Source="/LF.Controls;component/Styles/ComboBox.xaml" />
+                <ResourceDictionary Source="/LF.Controls;component/Styles/TabControl.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
