--- a/LF/Libraries/UI/LF.Controls/Styles/Button.xaml
+++ b/LF/Libraries/UI/LF.Controls/Styles/Button.xaml
@@ -5,11 +5,12 @@
         <Setter Property="MinHeight" Value="24"/>
         <Setter Property="Cursor" Value="Hand"></Setter>
         <Setter Property="VerticalAlignment" Value="Center"></Setter>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"></Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Grid>
-                        <Border x:Name="border" CornerRadius="0" BorderThickness="0" BorderBrush="{StaticResource MainColor}" Background="{StaticResource MainColor}">
+                        <Border x:Name="border" CornerRadius="0" BorderThickness="1" BorderBrush="{StaticResource MainColor}" Background="{StaticResource MainColor}">
                             <TextBlock x:Name="text" Text="{TemplateBinding Content}"
                                        VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5 0 5 0"
                                        Foreground="White"></TextBlock>
@@ -36,6 +37,34 @@
                 <ControlTemplate TargetType="Button">
                     <Grid>
                         <Border x:Name="border" BorderThickness="1" BorderBrush="Transparent" Background="Transparent">
+                            <TextBlock x:Name="text" Text="{TemplateBinding Content}"
+                                       VerticalAlignment="Center" HorizontalAlignment="Center" Margin="3 0 3 0"
+                                       Foreground="{TemplateBinding Foreground}" FontSize="{TemplateBinding FontSize}"></TextBlock>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <!--<Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource LightMainColor}"/>-->
+                            <Setter TargetName="text" Property="Foreground" Value="{StaticResource MainColor}"/>
+                        </Trigger>
+
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!-- 扁平模式Button -->
+    <Style x:Key="SingleButton" TargetType="Button">
+        <Setter Property="Width" Value="auto"/>
+        <Setter Property="MinHeight" Value="24"/>
+        <Setter Property="Cursor" Value="Hand"></Setter>
+        <Setter Property="VerticalAlignment" Value="Center"></Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Grid>
+                        <Border x:Name="border" BorderThickness="1" BorderBrush="{StaticResource MainColor}" Background="Transparent">
                             <TextBlock x:Name="text" Text="{TemplateBinding Content}"
                                        VerticalAlignment="Center" HorizontalAlignment="Center" Margin="3 0 3 0"
                                        Foreground="{TemplateBinding Foreground}" FontSize="{TemplateBinding FontSize}"></TextBlock>
