--- a/LF/Projects/LF.Communication/LF.SerialCommunication.Project/App.xaml
+++ b/LF/Projects/LF.Communication/LF.SerialCommunication.Project/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="/LF.Controls;component/Styles/Color.xaml" />
                 <ResourceDictionary Source="/LF.Controls;component/Styles/Button.xaml" />
                 <ResourceDictionary Source="/LF.Controls;component/Styles/ComboBox.xaml" />
+                <ResourceDictionary Source="/LF.Controls;component/Styles/GroupBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
