--- a/LF/Projects/LF.Communication/LF.SerialCommunication.Project/MainWindow.xaml
+++ b/LF/Projects/LF.Communication/LF.SerialCommunication.Project/MainWindow.xaml
@@ -5,109 +5,149 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LF.SerialCommunication.Project"
         mc:Ignorable="d"
-        Title="串口通信助手" Height="450" Width="800"
+        Title="串口通信助手" Height="600" Width="800" MinHeight="500" MinWidth="700"
         WindowStartupLocation="CenterScreen" UseLayoutRounding="True"
         Background="{StaticResource BackColor}">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="32" />
+            <RowDefinition Height="24" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="24" />
         </Grid.RowDefinitions>
-        <Border Background="White" BorderBrush="{StaticResource LineColor}" BorderThickness="0 0 0 1">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <TextBlock Text="串口" VerticalAlignment="Center" Margin="10 0 5 0"></TextBlock>
-                <ComboBox Name="CmbName" IsEditable="True" Width="80" Margin="0 0 5 0" SelectionChanged="CmbName_SelectionChanged"></ComboBox>
-                <Button x:Name="BtnRefresh" Content="刷新" VerticalAlignment="Center" Margin="0 0 5 0" Style="{StaticResource FlatButton}"
-                        Click="BtnRefresh_Click"></Button>
-                <TextBlock Text="波特率" VerticalAlignment="Center" Margin="5 0 5 0"></TextBlock>
-                <ComboBox Name="CmbBaudrate" IsEditable="True" Width="80" Margin="0 0 5 0" SelectionChanged="CmbBaudrate_SelectionChanged">
-
-                </ComboBox>
-                <TextBlock Text="数据位" VerticalAlignment="Center" Margin="5 0 5 0"></TextBlock>
-                <ComboBox Name="CmbDatabits" IsEditable="True" Width="80" Margin="0 0 5 0" SelectedIndex="0" SelectionChanged="CmbDatabits_SelectionChanged">
-                    <ComboBoxItem Content="8"/>
-                    <ComboBoxItem Content="7"/>
-                    <ComboBoxItem Content="6"/>
-                    <ComboBoxItem Content="5"/>
-                </ComboBox>
-                <TextBlock Text="停止位" VerticalAlignment="Center" Margin="5 0 5 0"></TextBlock>
-                <ComboBox Name="CmbStopbits" IsEditable="True" Width="80" Margin="0 0 5 0" SelectedIndex="0" SelectionChanged="CmbStopbits_SelectionChanged">
-                    <ComboBoxItem Content="1"/>
-                    <ComboBoxItem Content="1.5"/>
-                    <ComboBoxItem Content="2"/>
-                </ComboBox>
-                <TextBlock Text="校验位" VerticalAlignment="Center" Margin="5 0 5 0"></TextBlock>
-                <ComboBox Name="CmbParity" IsEditable="True" Width="80" Margin="0 0 5 0" SelectedIndex="0" SelectionChanged="CmbParity_SelectionChanged">
-                    <ComboBoxItem Content="无"/>
-                    <ComboBoxItem Content="奇校验"/>
-                    <ComboBoxItem Content="偶校验"/>
-                </ComboBox>
-                <Button x:Name="BtnOpenClose" Content="打开串口"  Margin="3 0 8 0" Click="BtnOpenClose_Click" Width="60"></Button>
-            </StackPanel>
-        </Border>
+        <Border BorderBrush="{StaticResource LineColor}" BorderThickness="0 0 0 1" Background="White"></Border>
         <Grid Grid.Row="1" Margin="4">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="125" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
-            <RichTextBox x:Name="RtbRece" BorderBrush="{StaticResource LineColor}" IsReadOnly="True"
-                         Padding="3" VerticalScrollBarVisibility="Auto">
-            </RichTextBox>
-            <Border Grid.Row="1" Margin="0" BorderBrush="{StaticResource LineColor}" BorderThickness="1 0 1 1" Background="White">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="1*" />
-                    </Grid.ColumnDefinitions>
-                    <StackPanel Orientation="Horizontal">
-                        <RadioButton Content="HEX" VerticalAlignment="Center" Margin="4 0 4 0" IsChecked="True"></RadioButton>
-                        <RadioButton Content="TEXT" VerticalAlignment="Center" Margin="0 0 4 0"></RadioButton>
-                        <Rectangle Width="1" Fill="{StaticResource LineColor}"></Rectangle>
-                        <CheckBox Content="显示时间" VerticalAlignment="Center" Margin="4 0 4 0" IsChecked="{Binding IsShowTime}"></CheckBox>
-                        <CheckBox x:Name="CkbShowSend" Content="显示发送" VerticalAlignment="Center" Margin="0 0 4 0"
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="180" />
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <!-- 接收串口 -->
+                <Grid Margin="4">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <RichTextBox Grid.ColumnSpan="2" x:Name="RtbRece" BorderBrush="{StaticResource LineColor}" IsReadOnly="True"
+                         Padding="3" VerticalScrollBarVisibility="Auto" Margin="0">
+                    </RichTextBox>
+                    <Border Grid.Row="1" Grid.ColumnSpan="2" Margin="0" BorderBrush="{StaticResource LineColor}" BorderThickness="1 0 1 1" Background="White">
+                        <Grid Margin="4">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="auto" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Orientation="Horizontal">
+                                <CheckBox Height="24" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="0" Content="HEX" VerticalAlignment="Center" Margin="4" IsChecked="{Binding IsShowHex}"
+                                          Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"></CheckBox>
+                                <Rectangle Width="1" Fill="{StaticResource LineColor}" Margin="4"></Rectangle>
+                                <CheckBox Height="24" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="1" Content="自动换行" VerticalAlignment="Center" Margin="4" IsChecked="{Binding IsNewLine}"></CheckBox>
+                                <CheckBox Height="24" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Content="显示时间" VerticalAlignment="Center" Margin="4" IsChecked="{Binding IsShowTime}"></CheckBox>
+                                <CheckBox Height="24" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="1" x:Name="CkbShowSend" Content="显示发送" VerticalAlignment="Center" Margin="4"
                                   IsChecked="{Binding IsShowSend}"></CheckBox>
-                        <CheckBox Content="自动换行" VerticalAlignment="Center" Margin="0 0 4 0"></CheckBox>
-                        <Rectangle Width="1" Fill="{StaticResource LineColor}"></Rectangle>
-                    </StackPanel>
-                    <Button x:Name="BtnClear" Content="清屏" Grid.Column="1" Margin="4" Width="60" HorizontalAlignment="Right" Click="BtnClear_Click"></Button>
-                </Grid>
-            </Border>
-            <RichTextBox x:Name="RtbSend" Grid.Row="2" Margin="0 4 0 0" BorderBrush="{StaticResource LineColor}" Padding="3"></RichTextBox>
-            <Border Grid.Row="3" BorderBrush="{StaticResource LineColor}" BorderThickness="1 0 1 1" Background="White">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="1*" />
-                    </Grid.ColumnDefinitions>
-                    <StackPanel Orientation="Horizontal">
-                        <RadioButton x:Name="RbnSendHex" Content="HEX" VerticalAlignment="Center" Margin="4 0 4 0" IsChecked="{Binding IsSendHex}"></RadioButton>
-                        <RadioButton x:Name="RbnSendText" Content="TEXT" VerticalAlignment="Center" Margin="0 0 4 0"></RadioButton>
-                        <Rectangle Width="1" Fill="{StaticResource LineColor}"></Rectangle>
-                        <CheckBox x:Name="CkbAutoSend" Content="自动发送" VerticalAlignment="Center" Margin="4 0 4 0"></CheckBox>
-                        <TextBox Text="100" VerticalAlignment="Center" Width="50" Margin="0 0 4 0" IsEnabled="{Binding ElementName=CkbAutoSend, Path=IsChecked}"></TextBox>
-                        <TextBlock Text="ms" VerticalAlignment="Center" Margin="0 0 4 0"></TextBlock>
-                        <Rectangle Width="1" Fill="{StaticResource LineColor}"></Rectangle>
-                    </StackPanel>
-                    <Button Name="BtnSend" Content="发送" Grid.Column="1" Margin="4" Width="60" HorizontalAlignment="Right" Click="BtnSend_Click"></Button>
+                                <Rectangle Width="1" Fill="{StaticResource LineColor}" Margin="4"></Rectangle>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1"  Orientation="Horizontal"  HorizontalAlignment="Right">
+                                <Button Grid.Row="2" Grid.Column="0" x:Name="BtnSave" Content="保存屏幕" Margin="4" Click="BtnSave_Click"></Button>
+                                <Button Grid.Row="2" Grid.Column="1" x:Name="BtnClear" Content="清除屏幕" Margin="4"
+                                Click="BtnClear_Click"></Button>
 
+                            </StackPanel>
+
+                        </Grid>
+                    </Border>
                 </Grid>
-            </Border>
+                <!-- 发送窗口 -->
+
+                <Grid Margin="4" Grid.Row="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="125" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <TextBox x:Name="TxbSend" Text="Hello, LFLink!" Grid.Row="0" Margin="0" BorderBrush="{StaticResource LineColor}" Padding="3"></TextBox>
+                    <Border Grid.Row="1" BorderBrush="{StaticResource LineColor}" Margin="0" BorderThickness="1 0 1 1" Background="White">
+                        <Grid Margin="4">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="auto" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Orientation="Horizontal">
+                                <CheckBox Name="CkbSendHex" Content="HEX" VerticalAlignment="Center" Margin="4" IsChecked="{Binding IsSendHex}"
+                                      Checked="CkbSendHex_Checked" Unchecked="CkbSendHex_Unchecked"></CheckBox>
+                                <Rectangle Width="1" Fill="{StaticResource LineColor}" Margin="4"></Rectangle>
+                                <CheckBox x:Name="CkbAutoSend" Content="自动发送" VerticalAlignment="Center" Margin="4"
+                                      Checked="CkbAutoSend_Checked" Unchecked="CkbAutoSend_Unchecked"></CheckBox>
+                                <TextBox Name="txbTimeInterval" Text="100" VerticalAlignment="Center" Width="50" Margin="4"></TextBox>
+                                <TextBlock Text="ms" VerticalAlignment="Center" Margin="4"></TextBlock>
+                                <Rectangle Width="1" Fill="{StaticResource LineColor}" Margin="4"></Rectangle>
+                            </StackPanel>
+                            <Button Name="BtnSend" Content="发送" Grid.Column="1" Margin="4" Width="60" HorizontalAlignment="Right" Click="BtnSend_Click"></Button>
+
+                        </Grid>
+                    </Border>
+                </Grid>
+            </Grid>
+            <StackPanel Grid.Column="1">
+                <GroupBox Header="串口配置" Margin="4" VerticalAlignment="Top">
+                    <Grid Margin="4">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Text="串口名称" VerticalAlignment="Center" Margin="4"></TextBlock>
+                        <TextBlock Text="波特率" Grid.Row="1" VerticalAlignment="Center" Margin="4"></TextBlock>
+                        <TextBlock Text="数据位" Grid.Row="2" VerticalAlignment="Center" Margin="4"></TextBlock>
+                        <TextBlock Text="停止位" Grid.Row="3" VerticalAlignment="Center" Margin="4"></TextBlock>
+                        <TextBlock Text="校验位" Grid.Row="4" VerticalAlignment="Center" Margin="4"></TextBlock>
+                        <ComboBox Grid.Column="1" Name="CmbName" IsEditable="True" Margin="4" SelectionChanged="CmbName_SelectionChanged"></ComboBox>
+                        <ComboBox Grid.Row="1" Grid.Column="1" Name="CmbBaudrate" IsEditable="True" Margin="4" SelectionChanged="CmbBaudrate_SelectionChanged"></ComboBox>
+                        <ComboBox Grid.Row="2" Grid.Column="1" Name="CmbDatabits" IsEditable="True" Margin="4" SelectedIndex="0" SelectionChanged="CmbDatabits_SelectionChanged">
+                            <ComboBoxItem Content="8"/>
+                            <ComboBoxItem Content="7"/>
+                            <ComboBoxItem Content="6"/>
+                            <ComboBoxItem Content="5"/>
+                        </ComboBox>
+                        <ComboBox Grid.Row="3" Grid.Column="1" Name="CmbStopbits" IsEditable="True" Margin="4" SelectedIndex="0" SelectionChanged="CmbStopbits_SelectionChanged">
+                            <ComboBoxItem Content="1"/>
+                            <ComboBoxItem Content="1.5"/>
+                            <ComboBoxItem Content="2"/>
+                        </ComboBox>
+                        <ComboBox Grid.Row="4" Grid.Column="1" Name="CmbParity" IsEditable="True" Margin="4" SelectedIndex="0" SelectionChanged="CmbParity_SelectionChanged">
+                            <ComboBoxItem Content="无"/>
+                            <ComboBoxItem Content="奇校验"/>
+                            <ComboBoxItem Content="偶校验"/>
+                        </ComboBox>
+                        <Button Grid.Row="5" x:Name="BtnRefresh" Content="刷新" VerticalAlignment="Center" Margin="4" Style="{StaticResource SingleButton}"
+                        Click="BtnRefresh_Click"></Button>
+                        <Button Grid.Row="5" Grid.Column="1" x:Name="BtnOpenClose" Content="打开串口"  Margin="4" Click="BtnOpenClose_Click"></Button>
+
+                    </Grid>
+
+                </GroupBox>
+            </StackPanel>
+
         </Grid>
         <Border Grid.Row="3" Background="{StaticResource BackColor}" BorderBrush="{StaticResource LineColor}" BorderThickness="0 1 0 0">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="已发送" VerticalAlignment="Center" Margin="8 0 4 0"></TextBlock>
+                <TextBlock Text="已发送" VerticalAlignment="Center" Margin="4"></TextBlock>
                 <TextBlock Text="{Binding SendCount}" VerticalAlignment="Center" Margin="0 0 4 0" Foreground="{StaticResource MainColor}"></TextBlock>
-                <TextBlock Text="bits" VerticalAlignment="Center" Margin="0 0 4 0"></TextBlock>
-                <TextBlock Text="已接收" VerticalAlignment="Center" Margin="8 0 4 0"></TextBlock>
-                <TextBlock Text="{Binding ReceCount}" VerticalAlignment="Center" Margin="0 0 4 0" Foreground="{StaticResource MainColor}"></TextBlock>
-                <TextBlock Text="bits" VerticalAlignment="Center" Margin="0 0 3 0"></TextBlock>
+                <TextBlock Text="bits" VerticalAlignment="Center" Margin="4"></TextBlock>
                 <Rectangle Width="1" Fill="{StaticResource LineColor}" Margin="4 0 4 0"></Rectangle>
-                <TextBlock Text="串口时间" VerticalAlignment="Center" Margin="8 0 4 0"></TextBlock>
-                <TextBlock Text="0" VerticalAlignment="Center" Margin="0 0 4 0" Foreground="{StaticResource MainColor}"></TextBlock>
-                <TextBlock Text="s" VerticalAlignment="Center" Margin="0 0 4 0"></TextBlock>
+                <TextBlock Text="已接收" VerticalAlignment="Center" Margin="4"></TextBlock>
+                <TextBlock Text="{Binding ReceiveCount}" VerticalAlignment="Center" Margin="0 0 4 0" Foreground="{StaticResource MainColor}"></TextBlock>
+                <TextBlock Text="bits" VerticalAlignment="Center" Margin="4"></TextBlock>
+                <Rectangle Width="1" Fill="{StaticResource LineColor}" Margin="4 0 4 0"></Rectangle>
             </StackPanel>
         </Border>
     </Grid>
